Fix: Fancy breadcrumb z-index conflict with the Grid format.

--- a/less/essential/breadcrumb.less
+++ b/less/essential/breadcrumb.less
@@ -109,7 +109,7 @@
       top: 50%;
       margin-top: -14px;
       left: 100%;
-      z-index: 100;
+      z-index: 1;
       border-left-width: 14px;
       border-left-style: solid;
     }
@@ -124,7 +124,7 @@
       top: 50%;
       margin-top: -14px;
       left: 100%;
-      z-index: 100;
+      z-index: 1;
       border-left-width: 14px;
       border-left-style: solid;
       margin-left: 1px;
